@@ -2,6 +2,7 @@
 import xbmc  # @UnresolvedImport
 import traceback
 import sys
+import logging
 
 def logInfo(message):
     if type(message) is not str:
@@ -15,14 +16,17 @@ def logDebug(message):
     
 def logError(message):
     if type(message) is not str:
+        if type(message) is Exception:
+            logging.exception(message)
+            return
         message = str(message)
     xbmc.log(message, xbmc.LOGERROR)
     
 def logFatal(message):
     if type(message) is not str:
         if type(message) is Exception:
-            exc_type, exc_value, exc_tb = sys.exc_info()
-            message = traceback.format_exception(exc_type, exc_value, exc_tb)
+            logging.exception(message)
+            return
         message = str(message)
     xbmc.log(message, xbmc.LOGFATAL)
     
@@ -33,11 +37,17 @@ def logNotice(message):
     
 def logSevere(message):
     if type(message) is not str:
+        if type(message) is Exception:
+            logging.exception(message)
+            return
         message = str(message)
     xbmc.log(message, xbmc.LOGSEVERE)
 
 def logWarning(message):
     if type(message) is not str:
+        if type(message) is Exception:
+            logging.exception(message)
+            return
         message = str(message)
     xbmc.log(message, xbmc.LOGWARNING)
         
